force-app/main/default/objects/Contact_Account_BigObject_Map__c/Contact_Account_BigObject_Map__c.object-meta.xml
<CustomObject>
    <label>Contact Account BigObject Map</label>
    <nameField>
        <displayFormat>CABM-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Account BigObject Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>