force-app/main/default/objects/Contact_Account_BigObject_Map__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>