force-app/main/default/objects/Contact_Account_BigObject_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Contact_Id__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>